#ifndef MTMCHKIN_H_
#define MTMCHKIN_H_

#include "Cards/Card.h"
#include "Players/Player.h"
#include <vector>
#include <memory>

using std::shared_ptr;

class Mtmchkin{

    std::vector<shared_ptr<Card>> m_cards;
    std::vector<shared_ptr<Player>> m_players;
    std::vector<shared_ptr<Player>> m_leaderboard;
    int m_round;
    unsigned int m_currentCard;
    int m_numOfWinners;
    int m_numOfLosers;

public:

    /*
    * C'tor of Mtmchkin class
    *
    * @param filename - a file which contains the cards of the deck.
    * @return
    *      A new instance of Mtmchkin.
    */
    Mtmchkin(const std::string fileName);

    /*
    * Play the next Round of the game - according to the instruction in the exercise document.
    *
    * @return
    *      void
    */
    void playRound();

    /*
    * Prints the leaderBoard of the game at a given stage of the game - according to the instruction in the exercise document.
    *
    * @return
    *      void
    */
    void printLeaderBoard() const;

    /*
    *  Checks if the game ended:
    *
    *  @return
    *          True if the game ended
    *          False otherwise
    */
    bool isGameOver() const;

    /*
    *  Returns the number of rounds played.
    *
    *  @return
    *          int - number of rounds played
    */
    int getNumberOfRounds() const;
};



#endif //MTMCHKIN_H_