@startuml MTMCHKIN

class Player
class Fighter
class Rogue
class Wizard

Player <|-- Fighter
Player <|-- Rogue
Player <|-- Wizard

class Card
class Battlecard
class Barfight
class Dragon
class Fairy
class Goblin
class Merchant
class Pitfall
class Treasure
class Vampire
class Gang

Card <|-- Battlecard
Card <|-- Barfight
Card <|-- Fairy
Card <|-- Merchant
Card <|-- Pitfall
Card <|-- Treasure
Card <|-- Gang
Battlecard <|-- Dragon
Battlecard <|-- Goblin
Battlecard <|-- Vampire

Gang --> "*" Dragon
Gang --> "*" Goblin
Gang --> "           *" Vampire

class Mtmchkin
Mtmchkin --> "      2-6" Player
Mtmchkin --> "5+       " Card

@enduml